[package]
name = "pallet-xcmp-handler-rpc"
description = "RPC API to provide information about xcmp"
version = "0.1.0"
edition = "2021"
authors = ["OAK Developement Team"]
license = "GPL-3.0"
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

pallet-xcmp-handler-rpc-runtime-api = { path = "./runtime-api" }
