[package]
name = "pallet-automation-price-rpc-runtime-api"
description = "Runtime RPC API to provide information about tasks"
version = "0.1.0"
edition = "2021"
authors = ["OAK Developement Team"]
license = "GPL-3.0"
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.3", features = ["derive", "full"], default-features = false }
serde = { version = "1.0.144", features = ["derive"], optional = true }

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.38" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-api/std",
	"sp-std/std",
]

